# EFIGenieSTM32F401C

./: .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  EFIGenieSTM32F401C.ioc  Makefile  README.md  STM32F401CCUx_FLASH.ld  STM32F401CCUx_Toolchain.cmake  STM32F401CCUx_Toolchain_Optimized.cmake  Serial.py  gitinit.sh
Core/Inc/: Entry.h  Stm32HalConf.h  stm32f4xx_hal_conf.h
Core/Src/: Entry.cpp  Stm32HalAnalogService.cpp  Stm32HalGpio.cpp  Stm32HalPwmService.cpp  Stm32HalTimer.cpp  Stm32HalTimerService.cpp  main.c  stm32f4xx_hal_msp.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
